# Spotify-Clone

./: .gitignore  CMakeLists.txt  README.md  icon.qrc  main.cpp
Database/: DatabaseManager.cpp  DatabaseManager.h
Entities/Account/: Account.cpp  Account.h
Entities/Album/: Album.cpp  Album.h
Entities/Artist/: Artist.cpp  Artist.h
Entities/Listener/: Listener.cpp  Listener.h
Entities/Playlist/: Playlist.cpp  Playlist.h
Entities/Song/: Song.cpp  Song.h
Repositories/AbstractRepository/: AbstractRepository.h
Repositories/AccountRepository/: AccountRepository.h
Repositories/AlbumRepository/: AlbumRepository.cpp  AlbumRepository.h
Repositories/ArtistRepository/: ArtistRepository.cpp  ArtistRepository.h
Repositories/ListenerRepository/: ListenerRepository.cpp  ListenerRepository.h
Repositories/PlaylistRepository/: PlaylistRepository.cpp  PlaylistRepository.h
Repositories/SongRepository/: SongRepository.cpp  SongRepository.h
Services/AccountService/: AccountService.cpp  AccountService.h
Services/ArtistService/: ArtistService.cpp  ArtistService.h
Services/AuthenticationService/: AuthenticationService.cpp  AuthenticationService.h
Services/BrowseService/: BrowseService.cpp  BrowseService.h
Services/ListenerService/: ListenerService.cpp  ListenerService.h
Services/PlayerService/: PlayerService.cpp  PlayerService.h
Services/SearchService/: SearchService.cpp  SearchService.h
UI/: Page.h
UI/Components/CardGrid/: CardGrid.h
UI/Components/CardList/: CardList.h
UI/Components/Cards/AlbumCard/: AlbumCard.cpp  AlbumCard.h
UI/Components/Cards/ArtistCard/: ArtistCard.cpp  ArtistCard.h
UI/Components/Cards/PlaylistCard/: PlaylistCard.cpp  PlaylistCard.h
UI/Components/Cards/SongCard/: SongCard.cpp  SongCard.h
UI/Components/PlayerBar/: PlayerBar.cpp  PlayerBar.h
UI/Components/SideBar/: SideBar.cpp  SideBar.h
UI/Components/TopBar/: TopBar.cpp  TopBar.h
UI/MainWindow/: MainWindow.cpp  MainWindow.h
UI/Pages/Album/: AlbumPage.cpp  AlbumPage.h
UI/Pages/Artist/: ArtistPage.cpp  ArtistPage.h
UI/Pages/Create/Album/: CreateAlbumPage.cpp  CreateAlbumPage.h
UI/Pages/Create/Playlist/: CreatePlaylistPage.cpp  CreatePlaylistPage.h
UI/Pages/Create/Song/: CreateSongPage.cpp  CreateSongPage.h
UI/Pages/Edit/Album/: EditAlbumPage.cpp  EditAlbumPage.h
UI/Pages/Edit/Playlist/: EditPlaylistPage.cpp  EditPlaylistPage.h
UI/Pages/Edit/Song/: EditSongPage.cpp  EditSongPage.h
UI/Pages/Home/: HomePage.cpp  HomePage.h
UI/Pages/LikedSongs/: LikedSongsPage.cpp  LikedSongsPage.h
UI/Pages/Login/: LoginPage.cpp  LoginPage.h
UI/Pages/PlayList/: PlaylistPage.cpp  PlaylistPage.h
UI/Pages/Profile/: ProfilePage.cpp  ProfilePage.h
UI/Pages/ProfileEdit/: ProfileEditPage.cpp  ProfileEditPage.h
UI/Pages/Register/: RegisterPage.cpp  RegisterPage.h
UI/Pages/Search/: SearchPage.cpp  SearchPage.h
UI/Pages/Songs/: SongsPage.cpp  SongsPage.h
